fix: color contrast of select element corrected, added in form input text color for inputs, deps updated, and resolved a11y issue related to baseradiobutton.

--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -11,6 +11,7 @@
   --color-error: #e8f3ff;
   --color-form-dark: #50325a;
   --color-form-light: #846f8b;
+  --color-form-text: #191919;
   --color-form-border-dark: #494949;
   --color-form-border-light: #626262;
   --font-sans: "Bebas Neue", sans-serif;
